<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:listDivider"
        android:orientation="vertical"
        android:showDividers="middle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/repoProfileImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/repoProfileImage"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/repoProfileTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:maxLines="2"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/holo_blue_dark"
                    tools:text="username/myrepository" />

                <TextView
                    android:id="@+id/repoProfileStars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_star_black_24dp"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black"
                    tools:text="100 Stars" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/RepoDetailPaddingStyle">

            <ImageView
                android:id="@+id/repoNameImage"
                style="@style/RepoDetailImageStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/repoUserName"
                style="@style/RepoDetailTitleStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="LeeJaeWoo" />

            <TextView
                style="@style/RepoDetailContentStyle"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repoUserName" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout style="@style/RepoDetailPaddingStyle">

            <ImageView
                android:id="@+id/repoFollowerImage"
                style="@style/RepoDetailImageStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_visibility_black_24dp" />

            <TextView
                android:id="@+id/repoFollowerTitle"
                style="@style/RepoDetailTitleStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="200 / 30" />

            <TextView
                style="@style/RepoDetailContentStyle"
                android:text="@string/follower"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repoFollowerTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/RepoDetailPaddingStyle">

            <ImageView
                android:id="@+id/repoDescriptionImage"
                style="@style/RepoDetailImageStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_description_black_24dp" />

            <TextView
                android:id="@+id/repoDescriptionTitle"
                style="@style/RepoDetailTitleStyle"
                android:layout_width="0dp"
                android:maxLines="2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="My Description" />

            <TextView
                style="@style/RepoDetailContentStyle"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repoDescriptionTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/RepoDetailPaddingStyle">

            <ImageView
                android:id="@+id/repoLanguageImage"
                style="@style/RepoDetailImageStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_language_black_24dp" />

            <TextView
                android:id="@+id/repoLanguageTitle"
                style="@style/RepoDetailTitleStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Kotlin" />

            <TextView
                style="@style/RepoDetailContentStyle"
                android:text="@string/language"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repoLanguageTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/RepoDetailPaddingStyle">

            <ImageView
                android:id="@+id/repoLastUpdateImage"
                style="@style/RepoDetailImageStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_update_black_24dp" />

            <TextView
                android:id="@+id/repoLastUpdateTitle"
                style="@style/RepoDetailTitleStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="yyyy/MM/dd" />

            <TextView
                style="@style/RepoDetailContentStyle"
                android:text="@string/last_update"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repoLastUpdateTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextView-->
    <!--        android:id="@+id/tvActivityRepositoryMessage"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_centerInParent="true"-->
    <!--        android:layout_marginLeft="4dp"-->
    <!--        android:layout_marginRight="4dp"-->
    <!--        android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
    <!--        android:textColor="@color/githubBlack" />-->


</androidx.constraintlayout.widget.ConstraintLayout>